# lucj

./: .gitignore  README.md  envrc  main.py  pyproject.toml  run.md  run.sh  run1.sh  run2.sh  run_fe2s2.sh  run_n2_cc-pvdz.sh
csv/: improvement_quimb.xlsx  sample_valid_bitstrings.xlsx
molecules-catalog/: pyproject.toml
molecules-catalog/data/molecular_data/: fe2s2_30e20o.json.xz  n2_6-31g_10e16o_d-1.20000.json.xz  n2_6-31g_10e16o_d-2.40000.json.xz  n2_cc-pvdz_10e26o_d-1.20000.json.xz  n2_cc-pvdz_10e26o_d-2.40000.json.xz
molecules-catalog/src/molecules_catalog/: __init__.py  dissociation_curve.py  util.py
scratch/: compare_t2.ipynb  compare_t2_sqd.ipynb  compressed_t2.py  compressed_t2_connectivity.py  compressed_t2_connectivity_warm_up.py  compressed_t2_gradient.py  compressed_t2_multi_stage.py  hardware_job_fractional_gate.py  lucj_compressed_t2_peps.py  lucj_sqd_quimb_peps_task.py  n2_sto-6g_10e8o_2_gradient_multi_stage.pickle  n2_sto-6g_10e8o_30_gradient_multi_stage.pickle  n2_sto-6g_10e8o_4-t2_dagger.pickle  n2_sto-6g_10e8o_4.pickle  n2_sto-6g_10e8o_4_gradient-t2_dagger.pickle  n2_sto-6g_10e8o_4_gradient.pickle  n2_sto-6g_10e8o_4_gradient_multi_stage.pickle  notes.md  operator_n2_sto_6g_n_reps_1.pickle  operator_n2_sto_6g_n_reps_1_circuit.qpy  parameter_fitting.py  parameter_fitting_ori.py  progress_report_0710.md  quimb_bp.ipynb  test.py  test2.py  test_sci.pickle  test_sci_dice_False.pickle  tmp.npz  uccsd.py  vqe.py  write_csv.py
scratch/archive/: quimb_bp.ipynb  quimb_bp.py
scratch/archive/quimb_explore/: lucj_compressed_t2_circuit.py  lucj_compressed_t2_peps.py  lucj_sqd_quimb_circuit_task.py  lucj_sqd_quimb_peps_task.py  lucj_sqd_quimb_task_sci_rbfopt.py
scratch/archive/quimb_sci_sqd_task/: lucj_sqd_quimb_task.py
scratch/archive/quimb_sci_task/: lucj_quimb_aqc_task.py  lucj_quimb_task.py
scratch/no_improvement/: lucj_compressed_t2_connectivity_wo_dagger_task.py  lucj_sqd_compressed_t2_connectivity_wo_dagger_task.py
scratch/no_improvement/lucj_sqd_compressed_t2_connectivity_wo_dagger/: n2_6-31g_10e16o.py
scripts/analysis/: check_norm.py  check_norm_n2-ccpvdz.py  check_norm_reg1.py  permute_operator.py  sample_distribution.py  sample_distribution_cdf.py  sample_distribution_constant_factor.py  sample_distribution_t2_constant_factor.py  sample_score.py  wave_function_distribution_cdf.py
scripts/export/lucj_params/: n2_6-31g_10e16o.py
scripts/hardware/fe2s2_30e20o/: batch.py  batch_fg.py  batch_fractional_gate.py  batch_fractional_gate_sqd.py  batch_sqd.py  batch_tmp.py  lucj_compressed_t2.py  lucj_random_t2.py  lucj_truncated_t2.py
scripts/hardware/n2_6-31g_10e16o/: batch.py  batch_fractional_gate.py  lucj_compressed_t2.py  lucj_random_t2.py  lucj_truncated_t2.py
scripts/hardware/n2_cc-pvdz_10e26o/: batch.py  batch_fg.py  batch_fractional_gate.py  batch_fractional_gate_r24.py  batch_r24.py  batch_r24_fg.py  lucj_compressed_t2.py  lucj_compressed_t2_constant_factor.py  lucj_random_t2.py  lucj_truncated_t2.py
scripts/hardware/n2_sto-6g_10e8o/: lucj_compressed_t2.py
scripts/hardware_quimb/fe2s2_30e20o/: lucj_compressed_t2.py
scripts/hardware_quimb/n2_6-31g_10e16o/: lucj_compressed_t2.py
scripts/hardware_quimb/n2_cc-pvdz_10e26o/: lucj_compressed_t2.py
scripts/operator/fe2s2_30e20o/: lucj_compressed_t2.py  lucj_compressed_t2_connectivity.py
scripts/operator/fe4s4_54e36o/: lucj_compressed_t2.py
scripts/operator/n2_6-31g_10e16o/: lucj_compressed_t2.py  lucj_compressed_t2_fixparam.py  (+8 more)
scripts/paper/: color.json  gen_csv.py
src/lucj/: params.py  util.py
(+8834 files in other folders)
