[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "lucj"
description = "Numerical studies of the LUCJ ansatz."
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ffsim",
    "qiskit-addon-aqc-tensor[quimb-jax]",
    "qiskit-addon-sqd",
    "qiskit[visualization] >= 1.0",
    "tqdm",
    # recommended optional dependencies for cotengra
    "autoray",
    "cmaes",
    "cotengrust",
    "cytoolz",
    "kahypar",
    "loky",
    "networkx",
    "opt_einsum",
    "optuna",
    "qiskit-quimb>=0.0.9",
    "molecules-catalog",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pre-commit", "ruff"]

[tool.uv.sources]
qiskit-addon-aqc-tensor = { path = "../qiskit-addon-aqc-tensor", editable = true }
molecules-catalog = { path = "../../../../media/storage/kevinsung-public/molecules-catalog", editable = true }
qiskit-addon-sqd = { path = "../qiskit-addon-sqd", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
