[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "lucj"
description = "Numerical studies of the LUCJ ansatz."
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ffsim",
    "qiskit-addon-aqc-tensor[quimb-jax]",
    "qiskit[visualization] >= 1.0",
    "tqdm",
    # recommended optional dependencies for cotengra
    "autoray",
    "cmaes",
    "cotengrust",
    "cytoolz",
    "kahypar",
    "loky",
    "networkx",
    "opt_einsum",
    "optuna",
    "qiskit-quimb>=0.0.9",
    "molecules-catalog",
    "qiskit-ibm-runtime>=0.42.0",
    "qiskit-addon-sqd>=0.12.0",
    "pynomadbbo>=4.5.1",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pre-commit", "ruff"]

[tool.uv.sources]
molecules-catalog = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "molecules-catalog",
]


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
